--- a/.htaccess
+++ b/.htaccess
@@ -1,1 +1,5 @@
 Options -Indexes
+RewriteEngine on
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME}\.html -f
+RewriteRule ^(.*)$ $1.html
