--- a/.htaccess
+++ b/.htaccess
@@ -5,3 +5,7 @@ RewriteRule ^(.*)$ http://camsctf.com/$1 [R=301,L]
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}\.html -f
 RewriteRule ^(.*)$ $1.html
+
+ErrorDocument 400 /400.html
+ErrorDocument 404 /404.html
+ErrorDocument 500 /500.html
